# fontspector

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  Cargo.toml  GEMINI.md  INSTALLATION.md  PLUGIN.md  README.md  USING.md  cog.toml  package.json
.github/workflows/: build-binary.yml  coco.yml  conventional_pr.yml  debug-119.yml  pages.yml  release.yml  rust.yml
fontbakery-bridge/: CHANGELOG.md  Cargo.toml
fontbakery-bridge/src/: lib.rs
fontspector-checkapi/: CHANGELOG.md  Cargo.toml  build.rs
fontspector-checkapi/src/: check.rs  checkresult.rs  codetesting.rs  context.rs  error.rs  filetype.rs  fix.rs  font.rs  gsub.rs  lib.rs  plugin.rs  profile.rs  registry.rs  source.rs  status.rs  testable.rs
fontspector-checkhelper/: CHANGELOG.md  Cargo.toml
fontspector-checkhelper/src/: check.rs
fontspector-cli/: CHANGELOG.md  Cargo.toml
fontspector-cli/src/: args.rs  configuration.rs  hotfix.rs  main.rs  profiles.rs
fontspector-cli/src/reporters/: badges.rs  jinja.rs  json.rs  mod.rs  terminal.rs
fontspector-hotfix/: CHANGELOG.md  Cargo.toml
fontspector-hotfix/src/: lib.rs  main.rs
fontspector-py/: Cargo.toml  pyproject.toml
fontspector-py/src/: lib.rs
fontspector-py/tests/: test_checks_contour_count.py  test_checks_googlefonts.py  test_checks_name.py  test_checks_opentype_STAT_ital_axis.py  test_checks_opentype_name.py  test_checks_opentype_os2.py  test_checks_opentype_post.py  test_checks_outline.py  test_checks_required_tables.py  test_checks_shaping.py  test_checks_universal.py  test_checks_unwanted_tables.py
fontspector-web/: Cargo.toml
fontspector-web/src/: lib.rs
fontspector-web/www/: index.html  index.ts  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts  webworker.js
fontspector-web/www/public/: fontspector.css
fontspector-web/www/src/: App.vue  constants.ts  dummyresults.ts  main.scss  main.ts  markdown.ts  rendering.ts  store.ts  types.ts  webworker.ts  workersingleton.ts
fontspector-web/www/src/components/: ClassicView.vue  ErrorModal.vue  FixDialog.vue  ListChecks.vue  Navbar.vue  ProblemList.vue  ProblemView.vue  StartModal.vue  WrappedApp.vue
profile-adobe/: main.rs
profile-adobe/src/: lib.rs
profile-designspace/: Cargo.toml
profile-designspace/src/: lib.rs
profile-fontwerk/: CHANGELOG.md  Cargo.toml
profile-fontwerk/src/: lib.rs
profile-googlefonts/: CHANGELOG.md  Cargo.toml
profile-googlefonts/resources/: reserved_font_name_exceptions.txt
profile-googlefonts/src/: constants.rs  lib.rs
profile-googlefonts/src/checks/: dotted_circle.rs  soft_dotted.rs
profile-googlefonts/src/checks/googlefonts/: axes_match.rs  canonical_filename.rs  cjk_vertical_metrics.rs  color_fonts.rs  font_copyright.rs  font_names.rs  fstype.rs  fvar_instance_ps_names.rs  fvar_instances.rs  gasp.rs  glyph_coverage.rs  has_ttfautohint_params.rs  mod.rs  no_oblique_bit.rs  parametric_axes_hidden.rs  render_own_name.rs  separator_glyphs.rs  tofu.rs  unitsperem.rs  use_typo_metrics.rs  vendor_id.rs  version_bump.rs  weightclass.rs
profile-googlefonts/src/checks/googlefonts/STAT/: axis_order.rs  axisregistry.rs  compulsory_axis_values.rs  mod.rs  opsz_not_elided.rs
profile-googlefonts/src/checks/googlefonts/article/: images.rs
profile-googlefonts/src/checks/googlefonts/axisregistry/: fvar_axis_defaults.rs  fvar_axis_ranges.rs  mod.rs
profile-googlefonts/src/checks/googlefonts/description/: broken_links.rs  eof_linebreak.rs  git_url.rs  has_article.rs  has_unsupported_elements.rs  min_length.rs  mod.rs  no_free_word.rs  urls.rs  valid_html.rs
profile-googlefonts/src/checks/googlefonts/family/: equal_codepoint_coverage.rs  file_size.rs  has_license.rs  italics_have_roman_counterparts.rs  mod.rs  tnum_horizontal_metrics.rs
profile-googlefonts/src/checks/googlefonts/glyphsets/: shape_languages.rs
profile-googlefonts/src/checks/googlefonts/license/: OFL_body_text.rs  OFL_copyright.rs
profile-googlefonts/src/checks/googlefonts/meta/: script_lang_tags.rs
profile-googlefonts/src/checks/googlefonts/metadata/: axes.rs  broken_links.rs  can_render_samples.rs  category.rs  consistent_repo_urls.rs  consistent_with_fonts.rs  copyright.rs  designer_profiles.rs  escaped_strings.rs  family_directory_name.rs  familyname.rs  has_regular.rs  license.rs  mod.rs  primary_script.rs  regular_is_400.rs  subsets_correct.rs  unreachable_subsetting.rs  valid_nameid25.rs  valid_primary_script_language.rs  valid_stroke_and_classifications.rs  validate.rs  weightclass.rs
profile-googlefonts/src/checks/googlefonts/name/: description_max_length.rs  family_name_compliance.rs  familyname_first_char.rs  license.rs  line_breaks.rs  mandatory_entries.rs  mod.rs  no_vf_in_name.rs  rfn.rs  version_format.rs
profile-googlefonts/src/checks/googlefonts/repo/: ascii_filenames.rs  dirname_matches_nameid_1.rs  mod.rs  vf_has_static_fonts.rs
profile-googlefonts/src/checks/googlefonts/varfont/: has_HVAR.rs  mod.rs  slnt_needs_italic.rs
profile-googlefonts/src/checks/outline/: alignment_miss.rs  colinear_vectors.rs  direction.rs  jaggy_segments.rs  overlapping_path_segments.rs  semi_vertical.rs  short_segments.rs
profile-googlefonts/src/checks/shaping/: forbidden.rs  mod.rs  regression.rs
profile-iso15008/: CHANGELOG.md  Cargo.toml
profile-iso15008/src/: lib.rs
profile-microsoft/: Cargo.toml
profile-microsoft/src/: lib.rs  main.rs
profile-microsoft/src/checks/: tnum_glyphs_equal_widths.rs
profile-opentype/: CHANGELOG.md  Cargo.toml
profile-opentype/src/: lib.rs
profile-testplugin/: Cargo.toml
profile-testplugin/src/: lib.rs  main.rs
profile-universal/: CHANGELOG.md  Cargo.toml
profile-universal/data/: desired_glyph_data.json
profile-universal/src/: lib.rs
profile-universal/src/checks/: STAT_in_statics.rs  dsig.rs  (+71 more)
profiles/: typenetwork.toml  workspace.toml
python/: CHANGELOG.md  exampleplugin.py  fontspectorapi.py  pyproject.toml
python/src/fontspectorapi/: __init__.py  utils.py
resources/: profile.schema.json
scripts/: generate_glyphdata.py  publishable.py
(+66 files in other folders)
