[package]
name = "fontspector-checkapi"
version = "1.6.0"
edition = "2021"
description = "Library for developing checks for the fontspector font QA tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector"

[[bin]]
name = "dump-json-schema"
required-features = ["schemars"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = []
schemars = ["dep:schemars"]
clap = []

[build-dependencies]
minreq = { version = "2.6.0", features = ["https"] }
scraper = "0.26.0"
regex = { workspace = true }

[dependencies]
fontations = { workspace = true }
fontdrasil = { workspace = true }

fontspector-checkhelper = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
# Filetype
glob-match = "0.2.1"

# Argument parsing for plugin CLI
clap = { version = "4", features = ["derive", "cargo"] }

# Serializing and deserializing profiles
toml = { workspace = true }
serde = { workspace = true }

# Storing configuration
serde_json = "1.0"

itertools = { workspace = true }

kurbo = { workspace = true, optional = true }
thiserror = "2.0.12"
schemars = { version = "1.2.1", optional = true, features = ["indexmap2"] }


[lints]
workspace = true
