[package]
name = "fontspector-hotfix"
version = "0.1.0"
edition = "2021"
description = "Simple hotfix tool for applying font QA fixes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector"

[lib]
name = "fontspector_hotfix"
path = "src/lib.rs"

[[bin]]
name = "fontspector-hotfix"
path = "src/main.rs"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", version = "1.4.0" }
log = { workspace = true }

# Binary dependencies
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

# Profiles (optional - for the binary)
profile-universal = { path = "../profile-universal", version = "1.0.0", package = "fontspector-profile-universal", optional = true }
profile-opentype = { path = "../profile-opentype", version = "1.0.0", package = "fontspector-profile-opentype", optional = true }
profile-googlefonts = { path = "../profile-googlefonts", version = "1.0.0", package = "fontspector-profile-googlefonts", optional = true }
profile-fontwerk = { path = "../profile-fontwerk", version = "1.0.0", package = "fontspector-profile-fontwerk", optional = true }
profile-iso15008 = { path = "../profile-iso15008", version = "1.0.0", package = "fontspector-profile-iso15008", optional = true }

[features]
default = ["cli"]
cli = ["clap", "env_logger", "profile-universal", "profile-opentype", "profile-googlefonts", "profile-fontwerk", "profile-iso15008"]
