[package]
name = "fontspector-profile-googlefonts"
version = "1.7.0"
edition = "2021"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
description = "Fontspector checks for OpenType fonts according to Google Fonts requirements"
repository = "https://github.com/fonttools/fontspector"
homepage = "https://fonttools.github.io/fontspector/"
license = "Apache-2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
glob = "0.3.2"
serde = { workspace = true }                            # For reading shaping check JSON files

[dependencies]
chrono = "0.4.38" # For metadata date checks
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
], version = "1.0.0" }
gf-metadata = "0.2.0"
google-fonts-axisregistry = { version = "0.4", git = "https://github.com/googlefonts/axisregistry" }
google-fonts-languages = "0"
google-fonts-subsets = { version = "0.202602" }
google-fonts-glyphsets = { version = "1.1.0", git = "https://github.com/googlefonts/glyphsets" }
shaperglot = { version = "1", git = "https://github.com/googlefonts/shaperglot" }
indexmap = { workspace = true }
itertools = { workspace = true }
tabled = { workspace = true }
protobuf = "3.7.1"
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
fontations = { workspace = true }
kurbo = { workspace = true }
log = { workspace = true }
num-traits = "0.2.19"
similar = "2.7.0" # For shaping check reports, OFL body diff

unicode-normalization = "0"
unicode-properties = { workspace = true }
unicode-canonical-combining-class = "1.0.0"
unicode-script = "0.5.7"
yeslogic-unicode-blocks = "0.2.0"
unicode_names2 = { workspace = true }
hashbrown = { workspace = true }

scraper = { version = "0.25.0", default-features = false, features = [
    "errors",
] }
semver = "1.0.25"
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
] }
harfrust = { workspace = true }

[lints]
workspace = true
