[package]
name = "fontspector-profile-microsoft"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "microsoft-fontspectorplugin"
path = "src/main.rs"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
] }
fontations = { workspace = true }
regex = { workspace = true }
harfrust = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }

[lints]
workspace = true
