[package]
name = "fontspector-profile-testplugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "fontspector_profile_testplugin"

[[bin]]
name = "testplugin-fontspectorplugin"
path = "src/main.rs"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
